--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@
     justify-content: center;
     align-items: center;
 }
+.para{
+    height: 200px;
+    width: 400px;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+margin-left: 300px;
+}
